# vhs-gui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  banner.ans  build.rs  install-desktop.sh
resources/: vhs-gui.desktop
src/: app.rs  capture.rs  config.rs  fix_sync.rs  library.rs  main.rs  mpv_view.rs  persist.rs  pipeline.rs  settings.rs  v4l2.rs  vs_ops.rs
src/panels/: mod.rs  monitor.rs  upscale.rs
