[package]
name = "vhs-gui"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossbeam-channel = "0.5.15"
eframe = { version = "0.34.2", features = ["glow", "wayland", "x11"] }
egui = "0.34.2"
egui_glow = "0.34.2"
glow = "0.17"
libc = "0.2.186"
libmpv2 = "6.0.0"
nix = { version = "0.31.3", features = ["signal", "process"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
trash = "5"
png = "0.17"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
